--- a/.aigne/web-smith/pages/workspace/en/community.yaml
+++ b/.aigne/web-smith/pages/workspace/en/community.yaml
@@ -1,66 +1,82 @@
 meta:
   title: "Community & Enterprise Support for AIGNE DocSmith"
-  description: "Join the AIGNE DocSmith community to contribute, report issues, or request features. Explore enterprise solutions for team collaboration, security, and professional support."
-  image: "mediakit://community-enterprise-hero.png"
+  description: "Join the AIGNE DocSmith community on GitHub, get involved with contributions, and explore our enterprise solutions for team collaboration, security, and dedicated support."
+  image: "mediakit://hero-contact-enterprise.png"
 sections:
-  - sectionName: "CommunityHero"
-    sectionSummary: "A welcoming hero section that introduces the dual purpose of the page: community engagement and enterprise solutions, encouraging users to explore both paths."
-    splitHeroTitle: "Stronger Together: Community & Enterprise"
-    splitHeroDescription: "Whether you're a solo developer contributing to the community or a large team needing enterprise-grade features, you're in the right place. Let's build the future of documentation, together!"
+  - sectionName: "communityHero"
+    sectionSummary: "A vibrant hero section that warmly welcomes visitors and immediately directs them to either the community or enterprise pathways, setting a clear and energetic tone for the page."
+    splitHeroBigTitle: "Join Our Community, Power Your Enterprise."
+    splitHeroSubTitle: "Whether you're a solo developer or a large team, find the resources you need to succeed with AIGNE DocSmith."
+    splitHeroDescription: "Dive into our open-source community to contribute and get help, or explore our powerful enterprise features for production-grade documentation."
     splitHeroActions:
-      - text: "Get Involved"
-        link: "https://github.com/AIGNE-io/aigne-doc-smith/issues"
-      - text: "Enterprise Solutions"
+      - text: "Explore on GitHub"
+        link: "https://github.com/AIGNE-io/aigne-doc-smith"
+      - text: "Contact Enterprise Sales"
         link: "https://www.aigne.io/contact"
-    splitHeroRightImage: "mediakit://community-enterprise-hero.png"
-  - sectionName: "ContributionChannels"
-    sectionSummary: "This section provides clear, actionable pathways for community members to contribute by reporting issues or requesting features, directing them to the appropriate GitHub locations."
-    twoColumnGridTitle: "Join the Movement! How You Can Contribute"
+    splitHeroImage: "mediakit://hero-contact-enterprise.png"
+  - sectionName: "communityContribution"
+    sectionSummary: "This section energizes community members by showcasing clear, actionable ways they can contribute, from reporting bugs to requesting features, making it easy and exciting to get involved."
+    twoColumnGridTitle: "Get Involved with the Community"
     list:
-      - sectionName: "ReportIssuesCard"
-        sectionSummary: "Encourages users to report bugs and issues on GitHub, emphasizing the importance of clear reproduction steps to help the development process."
-        iconName: "lucide:bug"
+      - sectionName: "reportIssues"
+        sectionSummary: "A content card encouraging users to report bugs, guiding them to search existing issues and use templates for clear and effective communication."
         cardTitle: "Report Bugs & Issues"
-        cardDescription: "Found a glitch? Help us improve by reporting issues on GitHub. Clear reproduction steps make all the difference!"
-      - sectionName: "RequestFeaturesCard"
-        sectionSummary: "Invites users to share their ideas for new features in GitHub Discussions, empowering them to help shape the product's future."
-        iconName: "lucide:lightbulb"
+        cardDescription: "Found a bug? Help us improve by searching existing issues and using our templates to submit detailed reports. Let's squash them together!"
+        iconName: "lucide:bug"
+      - sectionName: "requestFeatures"
+        sectionSummary: "An inspiring content card that invites users to share their ideas for new features, directing them to GitHub Discussions and the public roadmap."
         cardTitle: "Request New Features"
-        cardDescription: "Have a brilliant idea? Share your feature requests in GitHub Discussions and help shape the future of DocSmith."
-  - sectionName: "EnterpriseFeatures"
-    sectionSummary: "Highlights the key benefits of the enterprise offering, showcasing features like team collaboration, advanced security, and priority support to attract business users."
-    threeColumnGridTitle: "Power Up Your Team with Enterprise Solutions"
+        cardDescription: "Have a brilliant idea? Share it in our GitHub Discussions, check the roadmap, and vote on existing requests. Your vision can shape the future of DocSmith!"
+        iconName: "lucide:lightbulb"
+  - sectionName: "enterpriseFeatures"
+    sectionSummary: "A dynamic bento grid that showcases the top-tier features for enterprise clients. This layout provides a visually engaging and easily scannable overview of the key benefits for businesses."
+    twoTwoBentoGridTitle: "Built for Enterprise & Production Use"
     list:
-      - sectionName: "TeamCollaborationFeature"
-        sectionSummary: "Details the multi-user workflows and role-based access controls available in the enterprise version to support team-based documentation efforts."
-        iconName: "lucide:users"
-        cardTitle: "Enhanced Team Collaboration"
-        cardDescription: "Streamline your documentation workflow with multi-user access, roles, and seamless collaboration tools."
-      - sectionName: "SecurityFeature"
-        sectionSummary: "Focuses on the security and compliance aspects of the enterprise plan, such as private cloud deployment and SSO integration, to build trust with large organizations."
-        iconName: "lucide:shield-check"
-        cardTitle: "Advanced Security & Compliance"
-        cardDescription: "Deploy on your own infrastructure with private cloud, SSO, and complete audit logs for full control."
-      - sectionName: "SupportFeature"
-        sectionSummary: "Outlines the premium support and professional services available to enterprise customers, ensuring they have the resources for success."
-        iconName: "lucide:rocket"
-        cardTitle: "Priority Support & Services"
-        cardDescription: "Get direct access to our engineering team, custom training, and professional services to ensure your success."
-  - sectionName: "LicenseInformation"
-    sectionSummary: "Clearly and simply explains the Elastic License 2.0, making the terms feel approachable and fair for both free and commercial users, building trust through transparency."
-    oneColumnGridTitle: "Transparent & Fair Licensing"
+      - sectionName: "teamCollaboration"
+        sectionSummary: "Highlights the multi-user workflow and role-based access features, showing how teams can work together seamlessly on documentation projects."
+        contentCardTitle: "Team Collaboration"
+        contentCardDescription: "Unleash your team's potential! Our multi-user workflows with role-based access let everyone contribute seamlessly, making documentation a true team sport."
+        contentCardBottomImage: "mediakit://enterprise-collaboration-visual.png"
+      - sectionName: "securityAndCompliance"
+        sectionSummary: "Focuses on the robust security options, including private cloud deployment and SSO, assuring enterprise customers of data privacy and compliance."
+        contentCardTitle: "Security & Compliance"
+        contentCardDescription: "Sleep soundly knowing your code is secure. Deploy on your private cloud, integrate with SSO, and maintain full audit logs. Your data, your rules."
+        contentCardBottomImage: "mediakit://enterprise-security-visual.png"
+      - sectionName: "customBrandingAndApi"
+        sectionSummary: "Showcases the ability to white-label documentation and automate workflows with API access, emphasizing brand consistency and efficiency."
+        contentCardTitle: "Custom Branding & API Access"
+        contentCardDescription: "Make it yours! White-label your documentation with your brand's identity and use our REST APIs to create fully automated, powerful pipelines."
+        contentCardBottomImage: "mediakit://enterprise-branding-visual.png"
+      - sectionName: "prioritySupportAndServices"
+        sectionSummary: "Emphasizes the premium support and professional services available, from direct engineering access to custom training, ensuring enterprise success."
+        contentCardTitle: "Priority Support & Services"
+        contentCardDescription: "You've got backup! Get direct access to our engineering team, custom training workshops, and professional help to ensure you get the most out of DocSmith."
+        contentCardBottomImage: "mediakit://enterprise-support-visual.png"
+  - sectionName: "communityResources"
+    sectionSummary: "A clean, three-column grid providing quick and easy access to key community resources like documentation, Twitter, and the community forum, encouraging further engagement."
+    threeColumnGridTitle: "Community & Resources"
     list:
-      - sectionName: "LicenseCard"
-        sectionSummary: "A visually supported card that breaks down the Elastic License 2.0 in simple terms, ensuring users understand what they can and cannot do with the software."
-        contentCardTitle: "Our Open & Commercial-Friendly License"
-        contentCardDescription: "DocSmith is licensed under the Elastic License 2.0. It's free for most use cases, including personal and commercial projects. The only restriction is that you cannot offer it as a competing hosted service. Simple, right?"
-        contentCardRightImage: "mediakit://license-visual.png"
-  - sectionName: "FinalCTA"
-    sectionSummary: "A final, energetic call-to-action that prompts users to take the next step, whether it's contacting the sales team for enterprise solutions or joining the community on GitHub."
-    ctaTitle: "Ready to Get Started?"
-    ctaDescription: "Whether you're joining our community or exploring enterprise options, we're excited to have you on board. Reach out today!"
+      - sectionName: "documentationLink"
+        sectionSummary: "A card linking to the official documentation, cleverly noting that it's a real-world example of DocSmith's capabilities."
+        cardTitle: "Official Docs"
+        cardDescription: "See DocSmith in action! Dive into our comprehensive documentation, built with the very tool you're exploring."
+        iconName: "lucide:book-open-check"
+      - sectionName: "twitterLink"
+        sectionSummary: "A card directing users to the official Twitter account for real-time updates and announcements, keeping them connected with the latest news."
+        cardTitle: "Follow us on Twitter"
+        cardDescription: "Don't miss a beat! Follow us for the latest updates, feature announcements, and community highlights."
+        iconName: "lucide:twitter"
+      - sectionName: "forumLink"
+        sectionSummary: "A card inviting users to join the community forum for discussions, questions, and peer-to-peer support in a lively environment."
+        cardTitle: "Join the Conversation"
+        cardDescription: "Jump into our community forum to ask questions, share your projects, and connect with fellow developers."
+        iconName: "lucide:messages-square"
+  - sectionName: "enterpriseCta"
+    sectionSummary: "A powerful and direct call-to-action that prompts enterprise visitors to take the next step, clearly stating the value proposition and providing a single, focused button to get in touch."
+    ctaTitle: "Ready to Scale with DocSmith?"
+    ctaDescription: "Contact our team to learn more about enterprise licensing, private deployments, and how we can help you build world-class documentation that shines."
     cta:
       - text: "Contact Us"
         link: "https://www.aigne.io/contact"
-      - text: "View on GitHub"
-        link: "https://github.com/AIGNE-io/aigne-doc-smith"
+      - text: ""
+        link: ""
